OPTION( BUILD_SHARED_LIBS "Set to OFF to build static libraries" ON )
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_SOURCE_DIR}/src/plugins")

IF(ARCIO)
  ADD_LIBRARY(arcio ARCIO.cc)
  TARGET_LINK_LIBRARIES(arcio ${PROJECT_NAME})
  SET_TARGET_PROPERTIES(arcio PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} arcio)
ENDIF(ARCIO)

IF(GRASSIO)
  ADD_LIBRARY(grassio GrassIO.cc)
  TARGET_LINK_LIBRARIES(grassio ${PROJECT_NAME})
  SET_TARGET_PROPERTIES(grassio PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} grassio)
ENDIF(GRASSIO)

IF(GEOTOPIO)
  ADD_LIBRARY(geotopio GeotopIO.cc)
  TARGET_LINK_LIBRARIES(geotopio ${PROJECT_NAME})
  SET_TARGET_PROPERTIES(geotopio PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} geotopio)
ENDIF(GEOTOPIO)

IF(GSNIO)
  SET_SOURCE_FILES_PROPERTIES(gsn/soapC.cpp PROPERTIES GENERATED TRUE)
  SET_SOURCE_FILES_PROPERTIES(gsn/soapA3DWebServiceSoap12BindingProxy.cpp PROPERTIES GENERATED TRUE)
  ADD_LIBRARY(gsnio GSNIO.cc gsn/soapA3DWebServiceSoap12BindingProxy.cpp gsn/soapC.cpp)
  TARGET_LINK_LIBRARIES(gsnio ${GSOAPPP} ${PROJECT_NAME})
  ADD_DEPENDENCIES(gsnio wsdl2cpp gsnclient)
  SET_TARGET_PROPERTIES(gsnio PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} gsnio)
ENDIF(GSNIO)

IF(IMISIO)
  find_path(ORACLE_INC "occi.h")
  find_library(ORACLE_LIB1 occi clntsh)
  find_library(ORACLE_LIB2 clntsh)
  ADD_LIBRARY(imisio ImisIO.cc)
  TARGET_LINK_LIBRARIES(imisio ${ORACLE_LIB1} ${ORACLE_LIB2} ${PROJECT_NAME})
  INCLUDE_DIRECTORIES(${ORACLE_INC})
  SET_TARGET_PROPERTIES(imisio PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} imisio)
ENDIF(IMISIO)

IF(BORMAIO)
  #find_path(XMLPP_INC "libxml++-2.6/libxml++/libxml++.h")
  #find_library(XMLPP xml++-2.6)
  FIND_PACKAGE(LibXML++ REQUIRED)
  INCLUDE_DIRECTORIES(${LibXML++_INCLUDE_DIRS})
  #include_directories("${XMLPP_INC}/libxml++-2.6")
  ADD_LIBRARY(bormaio BormaIO.cc)
  TARGET_LINK_LIBRARIES(bormaio ${LibXML++_LIBRARIES} ${PROJECT_NAME})
  SET_TARGET_PROPERTIES(bormaio PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} bormaio)
ENDIF(BORMAIO)

INSTALL(TARGETS ${MYPLUGINS}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)