OPTION( BUILD_SHARED_LIBS "Set to OFF to build static libraries" ON )
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_SOURCE_DIR}/src/plugins")

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

IF(DEST STREQUAL "par")
  SET(CMAKE_CXX_OUTPUT_EXTENSION "_par.o")
  SET(ARCIONAME arcio_par)
  SET(GRASSIONAME grassio_par)
  SET(GEOTOPIONAME geotopio_par)
  SET(GSNIONAME gsnio_par)
  SET(IMISIONAME imisio_par)
  SET(BORMAIONAME bormaio_par)

  INCLUDE(CMakeForceCompiler)
  CMAKE_FORCE_C_COMPILER(popcc POPCC)
  CMAKE_FORCE_CXX_COMPILER(popcc POPCC)
#  SET(SHAREDNAME ${PROJECT_NAME}_par)
ELSE(DEST)
  SET(GRASSIONAME grassio)
  SET(ARCIONAME arcio)
  SET(GEOTOPIONAME geotopio)
  SET(GSNIONAME gsnio)
  SET(IMISIONAME imisio)
  SET(BORMAIONAME bormaio)
#  SET(SHAREDNAME ${PROJECT_NAME})
ENDIF(DEST STREQUAL "par")

IF(ARCIO)
  ADD_LIBRARY(${ARCIONAME} ARCIO.cc)
  TARGET_LINK_LIBRARIES(${ARCIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${ARCIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${ARCIONAME})
ENDIF(ARCIO)

IF(GRASSIO)
  ADD_LIBRARY(${GRASSIONAME} GrassIO.cc)
  TARGET_LINK_LIBRARIES(${GRASSIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${GRASSIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${GRASSIONAME})
ENDIF(GRASSIO)

IF(GEOTOPIO)
  ADD_LIBRARY(${GEOTOPIONAME} GeotopIO.cc)
  TARGET_LINK_LIBRARIES(${GEOTOPIONAME} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${GEOTOPIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${GEOTOPIONAME})
ENDIF(GEOTOPIO)

IF(GSNIO)
  SET_SOURCE_FILES_PROPERTIES(gsn/soapC.cpp PROPERTIES GENERATED TRUE)
  SET_SOURCE_FILES_PROPERTIES(gsn/soapA3DWebServiceSoap12BindingProxy.cpp PROPERTIES GENERATED TRUE)
  ADD_LIBRARY(${GSNIONAME} GSNIO.cc gsn/soapA3DWebServiceSoap12BindingProxy.cpp gsn/soapC.cpp)
  TARGET_LINK_LIBRARIES(${GSNIONAME} ${GSOAPPP} ${SHAREDNAME})
  ADD_DEPENDENCIES(${GSNIONAME} wsdl2cpp gsnclient)
  SET_TARGET_PROPERTIES(${GSNIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${GSNIONAME})
ENDIF(GSNIO)

IF(IMISIO)
  find_path(ORACLE_INC "occi.h")
  find_library(ORACLE_LIB1 occi clntsh)
  find_library(ORACLE_LIB2 clntsh)
  ADD_LIBRARY(${IMISIONAME} ImisIO.cc)
  TARGET_LINK_LIBRARIES(${IMISIONAME} ${ORACLE_LIB1} ${ORACLE_LIB2} ${SHAREDNAME})
  INCLUDE_DIRECTORIES(${ORACLE_INC})
  SET_TARGET_PROPERTIES(${IMISIONAME} PROPERTIES 
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${IMISIONAME})
ENDIF(IMISIO)

IF(BORMAIO)
  #find_path(XMLPP_INC "libxml++-2.6/libxml++/libxml++.h")
  #find_library(XMLPP xml++-2.6)
  FIND_PACKAGE(LibXML++ REQUIRED)
  INCLUDE_DIRECTORIES(${LibXML++_INCLUDE_DIRS})
  #include_directories("${XMLPP_INC}/libxml++-2.6")
  ADD_LIBRARY(${BORMAIONAME} BormaIO.cc)
  TARGET_LINK_LIBRARIES(${BORMAIONAME} ${LibXML++_LIBRARIES} ${SHAREDNAME})
  SET_TARGET_PROPERTIES(${BORMAIONAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
    VERSION 0.1.0 SOVERSION 0.1.0)
  SET(MYPLUGINS ${MYPLUGINS} ${BORMAIONAME})
ENDIF(BORMAIO)

INSTALL(TARGETS ${MYPLUGINS}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
